--- a/图标样式.html
+++ b/图标样式.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./js/font-awesome-4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="图标样式.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="icons">
